[package]
name = "neo-replay-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lz-str = "0.2.1"
image = "0.24"
anyhow = "1.0"
thiserror = "1.0"
ab_glyph = "0.2"
font-kit = "0.11"

[[bin]]
name = "neo-replay"
path = "src/main.rs"